# monitoring-ui

./: .editorconfig  .gitignore  .prettierrc.json  .yarnrc  .yarnrc.yml  2.json  Dockerfile  README.md  docker-compose.yml  eslint.config.mts  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.mjs  vite.config.ts  vitest.setup.ts
.husky/: prepare-commit-msg
.storybook/: main.ts  preview.ts
api/mock/: Dockerfile  README.md  app.py  constants.py  data.json  environment.yml  notebook.ipynb  pyproject.toml  service-map.json
e2e/: example.spec.ts
src/: App.tsx  environment.d.ts  main.tsx  routeTree.gen.ts  vite-env.d.ts
src/_mock/: navMenu.ts
src/common/: README.md  constants.ts  fn.ts  queryClient.ts  queryOptions.ts  routes.ts  storage.ts  tasks.ts  tree.ts
src/components/: README.md
src/components/animate/: motion-container.tsx  motion-lazy.tsx  motion-viewport.tsx  types.ts
src/components/animate/variants/: action.ts  background.ts  bounce.ts  container.ts  fade.ts  flip.ts  index.ts  rotate.ts  scale.ts  slide.ts  transition.ts  (+1 more)
src/components/behavior/: SelectNode.tsx
src/components/charts/: README.md
src/components/forms/: README.md
src/components/icon/: icon-button.tsx  iconify-icon.tsx  index.ts  svg-icon.tsx
src/components/layout/: Loading.tsx  LogItem.tsx  LogsContainer.tsx  MilestonesSidebar.tsx  NonAuthLayout.tsx  README.md
src/components/loading/: circle-loading.tsx  line-loading.tsx
src/components/locale-picker/: index.tsx
src/components/logo/: index.tsx
src/components/progress-bar/: index.tsx
src/components/scrollbar/: index.tsx
src/components/ui/: Header.tsx  Sidebar.tsx
src/features/: README.md
src/hooks/: README.md  index.ts  useAuth.ts  useCurrentRouteMeta.tsx  useFlattenedRoutes.ts  useNavMenuElements.tsx  useNavMenuRoutes.tsx  useRoute.ts  useRouteToMenu.tsx  useServiceMapXFrm.ts
src/locales/: i18n.ts  useLocale.ts
src/pages/: Dashboard.tsx  Home.orig.tsx  Home.tsx  Login.tsx  NotFound.tsx  ServiceMap.tsx
src/providers/: LoginStateProvider.tsx
src/repositories/: index.ts  navMenu.ts  serviceMap.ts  status.ts  user.ts
src/routes/: __root.tsx  _authenticated.lazy.tsx  _authenticated.tsx  _public.tsx  about.lazy.tsx
src/routes/_authenticated/: about.lazy.tsx  dashboard.lazy.tsx  index.$.tsx  index.tsx  m.about.lazy.tsx  menu-level.menu-level-1a.lazy.tsx  menu-level.menu-level-1b.menu-level-2a.lazy.tsx  menu-level.menu-level-1b.menu-level-2b.lazy.tsx  monitor.lazy.tsx  servicemap.lazy.tsx  servicemap.tsx
src/routes/_public/: login.lazy.tsx  login.tsx  m.login.lazy.tsx  m.login.tsx
src/store/: README.md  index.ts  navMenuStore.ts  serviceMapStore.ts  settingStore.ts  userStore.ts
src/theme/: tailwind.css
src/theme/antd/: index.tsx  theme.ts
src/theme/hooks/: index.ts  use-reponsive.ts  use-theme-token.ts
types/: enum.ts  router.ts  types.ts
(+20 files in other folders)
