[tool.poetry]
name = "api.mock"
version = "0.1.0"
description = "MOCK APIs"
authors = ["Ashish Gupta <gotoashishgupta@gmail.com>"]
license = "Private"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
pydantic = "^2.8.2"
gunicorn = "^22.0.0"
autoreload = "^0.1.2"
python-multipart = "^0.0.9"
faker = "^26.2.0"
requests = "^2.32.3"
panda = "^0.3.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
tensorflow = "^2.17.0"
seaborn = "^0.13.2"
theano = "^1.0.5"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
keras = "^3.5.0"
transformers = "^4.45.0"
ipython = {extras = ["notebook"], version = "^8.27.0"}
pygments = "^2.18.0"
jq = "^1.8.0"

crewai = "^0.36.1" # installs langchain_community
crewai-tools = "^0.4.8"
langgraph = "^0.1.8"
langchain = "<0.3"
langchainhub = "^0.1.20"
langchain-community = "<0.3"
langchain-google-genai = "^1.0.7"
langchain-openai = "^0.1.16"
langchain-anthropic = "^0.1.20"
langchain-google-vertexai = "^1.0.6"
langchain-cohere = "^0.1.9"
langchain-fireworks = "^0.1.5"
langchain-groq = "^0.1.6"
langchain-mistralai = "^0.1.10"

matplotlib = "^3.9.1"
plotly = "^5.22.0"
pydot = "^2.0.0"
pydot-ng = "^2.0.0"

[tool.poetry.group.dev.dependencies]
# poetry add --group dev black mypy mkdocs flake8 bandit
black = "^23.12.1"
mypy = "^1.8.0"
mkdocs = "^1.5.3"
flake8 = "^7.0.0"
bandit = "^1.7.6"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
